Mr Hyde was here …

--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!--
- _____ _____ ____          _ __  __ ___
-|_   _| ____|  _ \__  __  | |  \/  |_ _|
-  | | |  _| | | | \ \/ /  | | |\/| || |
-  | | | |___| |_| |>  < |_| | |  | || |
-  |_| |_____|____//_/\_\___/|_|  |_|___|
+Teknothon 2018
 
-Event website by Syed Faheel Ahmad (github.com/faheel)
+Event website by SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad (github.com/faheel)
 -->
 
 <!DOCTYPE html>
@@ -22,23 +18,23 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>TEDxJMI</title>
+  <title>TEKNOTHON 2018</title>
   <link rel="shortcut icon" href="res/images/favicon.ico">
-  <meta name="description" content="TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
+  <meta name="description" content="TEKNOTHON - A Techno-Cultural event Organized by Department of Computer Science JMI. This March, at Jamia Millia Islamia.">
+  <meta name="keywords" content="Teknothon, JMI, Jamia Millia Islamia, New Delhi, event">
 
   <!-- Social media tags -->
   <!-- Open Graph -->
-  <meta property="og:title" content="TEDxJMI">
-  <meta property="og:description" content="Igniting Minds. This October, at Jamia Millia Islamia.">
+  <meta property="og:title" content="TEKNOTHON">
+  <meta property="og:description" content="A Techno-Cultural Event. This March, at Jamia Millia Islamia.">
   <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
-  <meta property="og:url" content="https://tedxjmi.com">
+  <meta property="og:url" content="https://Teknothon.github.io">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_JMI">
+  <meta name="twitter:site" content="@sahilqaiser">
   <!-- Google+ -->
-  <meta itemprop="name" content="TEDxJMI">
-  <meta itemprop="description" content="Igniting Minds. This October, at Jamia Millia Islamia.">
+  <meta itemprop="name" content="sahilqaiser">
+  <meta itemprop="description" content="A Techno-Cultural Event. This March, at Jamia Millia Islamia.">
   <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
 
   <!-- Browser themes -->
@@ -245,17 +241,13 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
           <div class="row">
             <div class="col-md-12">
               <p class="font-family-alt margin-5-5 no-margin-bottom no-margin-rl sm-text-large text-extra-large text-gray-dark-2">
-                TEDxJMI brings together a collection of doers, thinkers, innovators,
-                explorers, visionaries, teachers, learners and seeks to illuminate,
-                inspire, change perceptions, incite action and foster new connections.
+                A Techno-Cultural Event. This March, at Jamia Millia Islamia.
+Details Awaited
               </p>
 
               <p class="font-family-alt margin-5-5 no-margin-bottom no-margin-rl sm-text-large text-extra-large text-gray-dark-2">
-                We are focused on proffering a TED stage to speakers of varied backgrounds
-                and experiences for inspirational and intellectual acceleration. Our
-                event strategically allocates a window for collaboration of arts,
-                sciences, entrepreneurship and women empowerment - ideas that are close
-                to our central theme: <b>Igniting Minds</b>.
+                We are focused on ......
+Our event strategically allocates a window for ........
               </p>
             </div>
             <!-- //.col-sm-6 -->
@@ -268,17 +260,11 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
           <div class="testimonial">
             <div class="bg-white border border-gray-light border-round padding-5 width-100">
               <h4 class="font-weight-700 font-family-alt">
-                About TEDx
+                About Teknothon
               </h4>
               <br>
               <p class="no-margin text-gray-dark- text-large">
-                In the spirit of ideas worth spreading, TEDx is a program for local,
-                self-organized events that bring people together to share a TED-like
-                experience. At a TEDx event, TEDTalks video and live speakers combine
-                to spark deep discussion and connection. These local, self-organized
-                events are branded with TEDx, where x = an independently organized
-                TED event. The TED Conference provides general guidance for the
-                TEDx program, but individual TEDx events are self-organized.
+                A Techno-Cultural Event. This March, at Jamia Millia Islamia.
               </p>
             </div>
             <!-- //.bg-white -->
@@ -305,7 +291,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             </h3>
             <br>
             <p class="font-family-alt letter-spacing-1 margin-3 no-margin-bottom no-margin-rl text-white xs-title-small title-large text-uppercase font-weight-700">
-              Dr. M. A. Ansari Auditorium,<br>
+              Department of Computer Science,<br>
               Jamia Millia Islamia
             </p>
             <br>
@@ -360,11 +346,11 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
                   fjs.parentNode.insertBefore(js, fjs);
                 }(document, 'script', 'facebook-jssdk'));</script>
 
-                <div class="fb-page" data-href="https://www.facebook.com/tedxjmi/" data-tabs="timeline"
+                <div class="fb-page" data-href="https://www.facebook.com/teknothon.dcs/" data-tabs="timeline"
                     data-small-header="true" data-adapt-container-width="true" data-hide-cover="true"
                     data-show-facepile="false">
-                  <blockquote cite="https://www.facebook.com/tedxjmi/" class="fb-xfbml-parse-ignore">
-                    <a href="https://www.facebook.com/tedxjmi/">TEDxJMI</a>
+                  <blockquote cite="https://www.facebook.com/teknothon.dcs/" class="fb-xfbml-parse-ignore">
+                    <a href="https://www.facebook.com/teknothon.dcs/">TEKNOTHON</a>
                   </blockquote>
                 </div>
                 <!-- //Facebook plugin -->
@@ -388,7 +374,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
 
                 <!-- Twitter timeline -->
                 <a class="twitter-timeline" data-height="493" data-chrome="noheader, nofooter"
-                  data-dnt="true" href="https://twitter.com/TEDx_JMI">Tweets by TEDx_JMI</a>
+                  data-dnt="true" href="https://twitter.com/SahilQaiser">Tweets by Me</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 <!-- //Twitter timeline -->
               </div>
@@ -454,7 +440,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             Venue
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            Dr. M. A. Ansari Auditorium,<br>
+            Department of Computer Science,<br>
             Jamia Millia Islamia
           </p>
         </div>
@@ -524,7 +510,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
           </div>
           <!-- //.footer-logo -->
           <p class="disclaimer xs-text-center">
-            This independent TEDx event is operated under license from TED.
+            COPYRIGHT by TEKNOTHON
           </p>
           <!-- //.disclaimer -->
         </div>
@@ -533,9 +519,9 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
         <div class="col-sm-8">
           <div class="footer-social text-right">
             <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
-              <li><a href="https://facebook.com/tedxjmi"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="https://twitter.com/TEDx_JMI"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="https://instagram.com/tedxjmi"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://facebook.com/teknothon.dcs"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://twitter.com/sahilqaiser"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://instagram.com/teknothon2018"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
           <!-- //.footer-social -->
