--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
                 <div class="row">
                   <div class="col-md-10 col-md-offset-1 text-center">
                     <h2 class="font-family-alt font-weight-900 letter-spacing-2 text-white xs-title-extra-large sm-title-extra-large-3 title-extra-large-5">
-                      <span class="text-base-color">Igniting</span> Minds
+                      <span class="text-base-color">TEKNOTHON</span> 2018
                     </h2>
                     <br>
                     <h3 class="font-weight-700 letter-spacing-2 text-white xs-title-large sm-title-extra-large title-extra-large-3">
-                      October 16, 2017
+                      March 26,27, 2018
                     </h3>
                     <p class="font-family-alt text-white sm-title-small title-medium">
                       at
