--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ Our event strategically allocates a window for ........
               Jamia Millia Islamia
             </p>
             <br>
-            <a href="https://goo.gl/maps/4Y14DhZe4Fu" target="_blank"
+            <a href="https://goo.gl/nozzmR" target="_blank"
                 class="btn btn-outline-white sm-btn-medium btn-large margin-4-5 no-margin-bottom no-margin-rl">
               View location on map
             </a>
