--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
           </button>
 
           <a class="navbar-brand font-family-alt letter-spacing-1 text-extra-large text-uppercase" href="/">
-            <img class="logo-navbar-dark" src="res/images/logos/dark.png" alt="TEDxJMI"/>
-            <img class="logo-navbar-white" src="res/images/logos/light.png" alt="TEDxJMI"/>
+            <img class="logo-navbar-dark" src="res/images/logos/dark.png" alt="Teknothon"/>
+            <img class="logo-navbar-white" src="res/images/logos/light.png" alt="Teknothon"/>
           </a>
         </div>
         <!-- //.navbar-header -->
@@ -398,7 +398,7 @@ Our event strategically allocates a window for ........
                 <!-- Instagram posts -->
                 <script src="https://snapwidget.com/js/snapwidget.js"></script>
                 <div style="height: 500px; overflow-y: auto">
-                  <iframe src="https://snapwidget.com/embed/428495" class="snapwidget-widget" allowTransparency="true" frameborder="0" style="border:none; width:100%;"></iframe>
+                  <iframe src="https://snapwidget.com/embed/514839" class="snapwidget-widget" allowTransparency="true" frameborder="0" style="border:none; width:100%;"></iframe>
                 </div>
                 <!-- //Instagram posts -->
               </div>
