Changed favicon and Logos Light and Dark

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ Our event strategically allocates a window for ........
                   var js, fjs = d.getElementsByTagName(s)[0];
                   if (d.getElementById(id)) return;
                   js = d.createElement(s); js.id = id;
-                  js.src = "https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10&appId=203606196348015";
+                  js.src = "https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.10&appId=1530541233879214";
                   fjs.parentNode.insertBefore(js, fjs);
                 }(document, 'script', 'facebook-jssdk'));</script>
 
@@ -448,7 +448,7 @@ Our event strategically allocates a window for ........
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
           <a href="/Teknothon2018/res/insider_guide.pdf" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-            <span>Download<br>insider guide</span>
+            <span>Download<br>Teknothon Brochure</span>
           </a>
         </div>
         <!-- //.col-sm-4 -->
