--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
   <link rel="stylesheet" href="res/css/style.css">
 
   <!-- Color skin -->
-  <link rel="stylesheet" href="res/css/color_red.css">
+  <link rel="stylesheet" href="res/css/color_blue.css">
 
   <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 8]>
