--- a/404.html
+++ b/404.html
@@ -1,12 +1,9 @@
 <!--
- _____ _____ ____          _ __  __ ___
-|_   _| ____|  _ \__  __  | |  \/  |_ _|
-  | | |  _| | | | \ \/ /  | | |\/| || |
-  | | | |___| |_| |>  < |_| | |  | || |
-  |_| |_____|____//_/\_\___/|_|  |_|___|
+Teknothon 2018 
 
-Event website by Syed Faheel Ahmad (github.com/faheel)
+Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad (github.com/faheel)
 -->
+
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
@@ -22,24 +19,24 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>Page Not Found | TEDxJMI</title>
+  <title>Page Not Found | Teknothon</title>
   <link rel="shortcut icon" href="res/images/favicon.ico">
-  <meta name="description" content="TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
+  <meta name="description" content="TEKNOTHON - A Techno-Cultural event Organized by Department of Computer Science JMI. This March, at Jamia Millia Islamia.">
+  <meta name="keywords" content="Teknothon, JMI, Jamia Millia Islamia, New Delhi, event">
 
   <!-- Social media tags -->
   <!-- Open Graph -->
-  <meta property="og:title" content="TEDxJMI">
-  <meta property="og:description" content="Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
-  <meta property="og:url" content="https://tedxjmi.com">
+  <meta property="og:title" content="TEKNOTHON">
+  <meta property="og:description" content="A Techno-Cultural Event. This March, at Jamia Millia Islamia.">
+  <meta property="og:image" content="/res/images/logos/light-social.jpg">
+  <meta property="og:url" content="www.Teknothon.tech">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_JMI">
+  <meta name="twitter:site" content="@SahilQaiser">
   <!-- Google+ -->
-  <meta itemprop="name" content="TEDxJMI">
-  <meta itemprop="description" content="Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
+  <meta itemprop="name" content="sahilqaiser">
+  <meta itemprop="description" content="A Techno-Cultural Event. This March, at Jamia Millia Islamia.">
+  <meta itemprop="image" content="res/images/logos/light-social.jpg">
 
   <!-- Browser themes -->
   <meta name="theme-color" content="#000">
@@ -59,7 +56,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
   <link rel="stylesheet" href="res/css/style.css">
 
   <!-- Color skin -->
-  <link rel="stylesheet" href="res/css/color_red.css">
+  <link rel="stylesheet" href="res/css/color_blue.css">
 
   <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 8]>
@@ -146,7 +143,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             Date &amp; Time
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            October 16, 2017<br>
+            March 26,27 2018<br>
             10 AM to 5 PM
           </p>
         </div>
@@ -158,7 +155,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             Venue
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            Dr. M. A. Ansari Auditorium,<br>
+            Department of Computer Science,<br>
             Jamia Millia Islamia
           </p>
         </div>
@@ -228,7 +225,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
           </div>
           <!-- //.footer-logo -->
           <p class="disclaimer xs-text-center">
-            This independent TEDx event is operated under license from TED.
+            COPYRIGHT by TEKNOTHON.
           </p>
           <!-- //.disclaimer -->
         </div>
@@ -237,9 +234,9 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
         <div class="col-sm-8">
           <div class="footer-social text-right">
             <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
-              <li><a href="https://facebook.com/tedxjmi"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="https://twitter.com/TEDx_JMI"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="https://instagram.com/tedxjmi"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://facebook.com/teknothon.dcs"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://twitter.com/sahilqaiser"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://instagram.com/teknothon2018"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
           <!-- //.footer-social -->
