Registration For Sponsorship

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
   <!-- Open Graph -->
   <meta property="og:title" content="TEKNOTHON">
   <meta property="og:description" content="A Techno-Cultural Event. This March, at Jamia Millia Islamia.">
-  <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
+  <meta property="og:image" content="res/images/logos/light-social.jpg">
   <meta property="og:url" content="https://Teknothon.github.io">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
@@ -92,8 +92,8 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
             <li><a href="#page-top" class="line-height-unset">Sponsors</a></li>
             <li><a href="#page-top" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
-              <a href="#page-top" class="line-height-unset width-100">
-                Register
+              <a href="/register/" class="line-height-unset width-100">
+                Sponsorship Registration
               </a>
             </li>
           </ul>
