--- a/register/index.html
+++ b/register/index.html
@@ -1,12 +1,9 @@
 <!--
- _____ _____ ____          _ __  __ ___
-|_   _| ____|  _ \__  __  | |  \/  |_ _|
-  | | |  _| | | | \ \/ /  | | |\/| || |
-  | | | |___| |_| |>  < |_| | |  | || |
-  |_| |_____|____//_/\_\___/|_|  |_|___|
+Teknothon 2018 
 
-Event website by Syed Faheel Ahmad (github.com/faheel)
+Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad (github.com/faheel)
 -->
+
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
@@ -22,24 +19,23 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>Register | TEDxJMI</title>
-  <link rel="shortcut icon" href="../res/images/favicon.ico">
-  <meta name="description" content="Register for TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
+  <title>TEKNOTHON 2018</title>
+  <link rel="shortcut icon" href="res/images/favicon.ico">
+  <meta name="description" content="TEKNOTHON - A Techno-Cultural event Organized by Department of Computer Science JMI. This March, at Jamia Millia Islamia.">
+  <meta name="keywords" content="Teknothon, JMI, Jamia Millia Islamia, New Delhi, event">
 
   <!-- Social media tags -->
-  <!-- Open Graph -->
-  <meta property="og:title" content="Register for TEDxJMI">
-  <meta property="og:description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
-  <meta property="og:url" content="https://tedxjmi.com/register">
+  <!-- Open Graph -->  <meta property="og:title" content="TEKNOTHON">
+  <meta property="og:description" content="A Techno-Cultural Event. This March, at Jamia Millia Islamia.">
+  <meta property="og:image" content="res/images/logos/light-social.jpg">
+  <meta property="og:url" content="http://www.Teknothon.tech">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_JMI">
+  <meta name="twitter:site" content="@sahilqaiser">
   <!-- Google+ -->
-  <meta itemprop="name" content="Register for TEDxJMI">
-  <meta itemprop="description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
+  <meta itemprop="name" content="sahilqaiser">
+  <meta itemprop="description" content="A Techno-Cultural Event. This March, at Jamia Millia Islamia.">
+  <meta itemprop="image" content="res/images/logos/light-social.jpg">
 
   <!-- Browser themes -->
   <meta name="theme-color" content="#000">
@@ -59,7 +55,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
   <link rel="stylesheet" href="../res/css/style.css">
 
   <!-- Color skin -->
-  <link rel="stylesheet" href="../res/css/color_red.css">
+  <link rel="stylesheet" href="../res/css/color_blue.css">
 
   <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 8]>
@@ -114,7 +110,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
       <div class="row no-padding-rl">
         <div class="col-md-12">
           <h2 class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2">
-            Register for TEDxJMI
+            Register as Sponsors for Teknothon
           </h2>
           <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
         </div>
@@ -122,145 +118,92 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
       </div>
       <!-- //.row -->
 
-      <div class="row margin-2 no-margin-rl no-margin-bottom">
-        <p class="font-family-alt sm-text-large text-extra-large text-gray-dark-2">
-          Before registering, make sure to read and comply to the following rules
-          and guidelines regarding the event:
+      <div class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2">
+        <p align="center">
+          Before registering, please take your time to read and select from the following Sponsorship Plans regarding the event:
         </p>
 
-        <div class="row">
-          <div class="col-sm-6">
-            <div class="display-table height-100 no-padding-rl padding-7 width-100">
-              <div class="display-table-cell no-padding-tb padding-8 vertical-align-middle">
-                <span class="display-block font-weight-700 letter-spacing-1 text-large text-uppercase">
-                  Registration
-                </span>
-                <span class="bg-base-color display-inline-block margin-3 no-margin-bottom no-margin-rl separator-line-thick"></span>
-                <span class="display-block margin-2 no-margin-bottom no-margin-rl text-medium text-gray-dark-2">
-                  <ol>
-                    <li>By registering and making a payment you agree that all details provided are accurate. Any discrepancy may result in cancellation of registration.</li>
-                    <li>Cancellation and rescheduling of registration are not allowed.</li>
-                    <li>All tickets are non-refundable, non-transferable and is valid for one attendee only.</li>
-                    <li>Holder of any duplicate or forged passes/badges/tickets will be handed over to the security and/or police personnel. Forging passes is a criminal offence.</li>
-                  </ol>
-                </span>
-                <br>
-
-                <span class="display-block font-weight-700 letter-spacing-1 text-large text-uppercase">
-                  Venue
-                </span>
-                <span class="bg-base-color display-inline-block margin-3 no-margin-bottom no-margin-rl separator-line-thick"></span>
-                <span class="display-block margin-2 no-margin-bottom no-margin-rl text-medium text-gray-dark-2">
-                  <ol>
-                    <li>We urge you to mark your presence at the venue 45 minutes prior to event timing to carry out necessary verification.</li>
-                    <li>All attendees must carry e-ticket or its printout for verification at the venue.</li>
-                    <li>Please carry a valid government identity card to attain a conference attendee badge at the venue. Eg: Aadhar card, Voter ID, PAN card, etc.</li>
-                    <li>The attendees must wear their conference badge throughout the conference across all venues.</li>
-                    <li>Seat numbers will be allotted to each confirmed and verified attendee at the entrance.</li>
-                    <li>Entry into the auditorium will only start 30 minutes before the event timing.</li>
-                    <li>The auditorium doors will remain shut during sessions and will not open for entry.</li>
-                    <li>Attendees reaching late at the venue will <b>not</b> be allowed inside the auditorium while the sessions are in progress.</li>
-                    <li>There will be a simulcast area to view live proceedings in the venue foyer area.</li>
-                    <li>Re-entry into the venue is strictly prohibited. Attendees will have to submit event badge to the security at exit. The same will not be given back.</li>
-                  </ol>
-                </span>
-              </div>
-              <!-- //.display-table-cell -->
-            </div>
-            <!-- //.display-table -->
-          </div>
-
-          <div class="col-sm-6">
-            <div class="display-table height-100 xs-no-padding-top no-padding-rl padding-7 width-100">
-              <div class="display-table-cell no-padding-tb padding-8 vertical-align-middle">
-                <span class="display-block font-weight-700 letter-spacing-1 text-large text-uppercase">
-                  Solicitation
-                </span>
-                <span class="bg-base-color display-inline-block margin-3 no-margin-bottom no-margin-rl separator-line-thick"></span>
-                <span class="display-block margin-2 no-margin-bottom no-margin-rl text-medium text-gray-dark-2">
-                  <ol>
-                    <li>The organisers reserve the rights of frisk and restrict entry.</li>
-                    <li>Please cooperate with the private security and police personnel or any agencies for security checks.</li>
-                    <li>Any individual might be asked to leave the venue without any liability of a refund if there is any behavioural misdemeanour. This decision rests with the conference and venue management and is final and binding.</li>
-                    <li>No Flash Photography or video recording at the venue is permitted, under any circumstances.</li>
-                    <li>Carrying of food items, alcohol, cigarettes, weapons, inflammable and banned substances are strictly prohibited.</li>
-                    <li>The organiser does not take any responsibility for injuries, loss or theft of any personal belongings of the ticket holder.</li>
-                    <li>There will be adequate breaks for networking and refreshments.</li>
-                    <li>No children under the age of 15 will be allowed at the venue unaccompanied.</li>
-                    <li>All standard venue and attendee rules are to be adhered to by attendees.</li>
-                  </ol>
-                </span>
-                <br>
-
-                <span class="display-block font-weight-700 letter-spacing-1 text-large text-uppercase">
-                  Socialise
-                </span>
-                <span class="bg-base-color display-inline-block margin-3 no-margin-bottom no-margin-rl separator-line-thick"></span>
-                <span class="display-block margin-2 no-margin-bottom no-margin-rl text-medium text-gray-dark-2">
-                  <ol>
-                    <li>Use the official hashtag <b>#TEDxJMI</b> on social media to talk about the event.</li>
-                    <li>We urge you to carpool to save fuel and get to know fellow attendees before the event.</li>
-                    <li>Most importantly, have a great time!</li>
-                  </ol>
-                </span>
-              </div>
-              <!-- //.display-table-cell -->
-            </div>
-            <!-- //.display-table -->
-          </div>
+        <div class="container" align="center">
+          <div class="plans_img">
+            <img src="plans.jpg" align="center" width="60%">
+          </div>  
           <!-- //Features Box Style v3 End -->
         </div>
+        
       </div>
 
       <span class="bg-gray-light-2 separator-line-full"></span>
 
       <div class="row margin-5 no-margin-rl no-margin-bottom">
-        <div class="col-md-5 no-padding-rl">
-          <div class="row text-center">
-            <h3 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase xs-title-small title-medium title-sideline-base-color">
-              JMI Students
-            </h3>
-          </div>
-          <br>
-          <p>
-            If you're a student currently studying at JMI, you can register by
-            filling out the form provided at the link below.
-          </p>
-          <p>
-            The last date of registration for JMI students is October 05.
-          </p>
-          <div class="margin-8 no-margin-bottom no-margin-rl text-center">
-            <span class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-              Registration closed
-            </span>
-          </div>
-        </div>
         <!-- //.col-md-5 -->
 
-        <div class="contact-address col-md-6 col-md-offset-1">
-          <div class="row text-center">
-            <h3 class="font-family-alt font-weight-900 letter-spacing-2 text-uppercase xs-title-small title-medium title-sideline-base-color">
-              Others
-            </h3>
-          </div>
+        <div class="form_row" width="60%">
           <br>
-          <p>
-            Please visit the link below to proceed with the registration process.
-          </p>
-          <div class="margin-5 no-margin-bottom no-margin-rl text-center">
-            <span class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-              Registration closed
-            </span>
-          </div>
-        </div>
-        <!-- //.col-md-6 -->
-      </div>
-      <!-- //.row -->
-    </div>
-    <!-- //.container -->
-  </section>
-  <!-- //Section - Registration end -->
+          
+          <div class="row" align="left">
+              <div class="text">
+                  <h2 align="center" class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2">SPONSORSHIP Registration Form</h1>
+                  </div><br><br>
+            <!-- Google Spreadsheet START HERE -->
+            <!-- Style The Contact Form How Ever You Prefer -->
+            <link rel="stylesheet" href="../res/style.css">
 
+            <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="sahil.qaiser@gmail.com"
+            action="https://script.google.com/macros/s/AKfycbxOkcuBL-08vxmUKtv3TGeg2H1WMyDvATnxVNpRbHg1l4Ehqb4/exec">
+              <!-- change the form action to your script url -->
+
+              <fieldset class="pure-group">
+                <label for="name">Name: </label><br>
+                <input id="name" name="name" placeholder="Company/Individual name :" />
+              </fieldset>
+
+              <fieldset class="pure-group">
+                <label for="email"><em>Your</em> Email Address:</label><br>
+                <input id="email" name="email" type="email" value=""
+                required placeholder="your.name@email.com"/>
+                <span id="email-invalid" style="display:none">
+                  Must be a valid email address</span>
+              </fieldset>
+
+              <fieldset class="pure-group">
+                <label for="color">Sponsorship Plan : </label><br>
+                <input id="money_limit" name="money_limit" placeholder="5000" />
+              </fieldset>
+
+              <fieldset class="pure-group">
+                <label for="message">Message: </label>
+                <textarea id="message" name="message" rows="10" width="80%"
+                placeholder="Tell us any other plans or deals..."></textarea>
+              </fieldset>
+              <fieldset align="right">
+                <button class="button-success pure-button button-xlarge">
+                  <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
+              </fieldset>
+
+            </form>
+
+            <!-- Customise the Thankyou Message People See when they submit the form: -->
+            <div style="display:none;" id="thankyou_message">
+              <h2><em>Thanks</em> for contacting us!
+                We will get back to you soon!</h2>
+            </div>
+
+            <!-- Submit the Form to Google Using "AJAX" -->
+            <script data-cfasync="false" type="text/javascript"
+            src="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/form-submission-handler.js"></script>
+            <!-- <script data-cfasync="false" type="text/javascript"
+            src="/form-submission-handler.js"></script> -->
+          <!-- END -->
+                    </div>
+                  </div>
+                  <!-- //.col-md-6 -->
+                </div>
+                <!-- //.row -->
+              </div>
+              <!-- //.container -->
+            </section>
+            <!-- //Section - Registration end -->
+            <span class="bg-gray-light-2 separator-line-full"></span>
 
 
   <!-- Section - Event banner start -->
@@ -273,7 +216,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             Date &amp; Time
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            October 16, 2017<br>
+            March 26,27 2018<br>
             10 AM to 5 PM
           </p>
         </div>
@@ -285,7 +228,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             Venue
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            Dr. M. A. Ansari Auditorium,<br>
+            Department of Computer Science,<br>
             Jamia Millia Islamia
           </p>
         </div>
@@ -348,7 +291,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
           </div>
           <!-- //.footer-logo -->
           <p class="disclaimer xs-text-center">
-            This independent TEDx event is operated under license from TED.
+            COPYRIGHT by TEKNOTHON
           </p>
           <!-- //.disclaimer -->
         </div>
@@ -357,9 +300,9 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
         <div class="col-sm-8">
           <div class="footer-social text-right">
             <ul class="list-inline list-unstyled no-margin xs-text-center xs-title-small title-medium">
-              <li><a href="https://www.facebook.com/tedxjmi/"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="https://twitter.com/TEDx_JMI"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="https://www.instagram.com/tedxjmi/"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://facebook.com/teknothon.dcs"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://twitter.com/sahilqaiser"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://instagram.com/teknothon2018"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
           <!-- //.footer-social -->
