--- a/register/index.html
+++ b/register/index.html
@@ -91,7 +91,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
             <li><a href="/alumni/" class="line-height-unset">Alumni</a></li>
             <li><a href="/sponsors/" class="line-height-unset">Sponsors</a></li>
             <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
-            <li><a href="#page-top" class="page-scroll">Register</a></li>
+            <li><a href="#page-top" class="page-scroll">Sponsorship Registration</a></li>
           </ul>
         </div>
         <!-- //.navbar-collapse -->
