Added Sponsorship Registration

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
             <li><a href="#page-top" class="line-height-unset">Events</a></li>
             <li><a href="#page-top" class="line-height-unset">Our Team</a></li>
             <li><a href="#page-top" class="line-height-unset">Alumni</a></li>
-            <li><a href="#page-top" class="line-height-unset">Sponsors</a></li>
+            <li><a href="/sponsors/" class="line-height-unset">Sponsors</a></li>
             <li><a href="#page-top" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/register/" class="line-height-unset width-100">
@@ -447,9 +447,9 @@ Our event strategically allocates a window for ........
         <!-- //.col-sm-4 -->
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
-          <a href="/Teknothon2018/res/teknothon_brochure.pdf" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-            <span>Download<br>Teknothon Brochure</span>
-          </a>
+            <a href="/sponsors/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
+              <span>Register for<br>Sponsorship</span>
+            </a>
         </div>
         <!-- //.col-sm-4 -->
       </div>
