--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -1,12 +1,9 @@
 <!--
- _____ _____ ____          _ __  __ ___
-|_   _| ____|  _ \__  __  | |  \/  |_ _|
-  | | |  _| | | | \ \/ /  | | |\/| || |
-  | | | |___| |_| |>  < |_| | |  | || |
-  |_| |_____|____//_/\_\___/|_|  |_|___|
+Teknothon 2018 
 
-Event website by Syed Faheel Ahmad (github.com/faheel)
+Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad (github.com/faheel)
 -->
+
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
@@ -22,24 +19,23 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!-- Title, icon, description and keywords -->
-  <title>Our Sponsors | TEDxJMI</title>
-  <link rel="shortcut icon" href="../res/images/favicon.ico">
-  <meta name="description" content="Our Sponsors. TEDxJMI, x = independently organised TED event. Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta name="keywords" content="TEDx, JMI, Jamia Millia Islamia, New Delhi, event, talks">
+  <title>TEKNOTHON 2018</title>
+  <link rel="shortcut icon" href="res/images/favicon.ico">
+  <meta name="description" content="TEKNOTHON - A Techno-Cultural event Organized by Department of Computer Science JMI. This March, at Jamia Millia Islamia.">
+  <meta name="keywords" content="Teknothon, JMI, Jamia Millia Islamia, New Delhi, event">
 
   <!-- Social media tags -->
-  <!-- Open Graph -->
-  <meta property="og:title" content="Our Sponsors">
-  <meta property="og:description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta property="og:image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
-  <meta property="og:url" content="https://tedxjmi.com/sponsors">
+  <!-- Open Graph -->  <meta property="og:title" content="TEKNOTHON">
+  <meta property="og:description" content="A Techno-Cultural Event. This March, at Jamia Millia Islamia.">
+  <meta property="og:image" content="res/images/logos/light-social.jpg">
+  <meta property="og:url" content="http://www.Teknothon.tech">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@TEDx_JMI">
+  <meta name="twitter:site" content="@sahilqaiser">
   <!-- Google+ -->
-  <meta itemprop="name" content="Our Sponsors">
-  <meta itemprop="description" content="TEDxJMI - Igniting Minds. This October, at Jamia Millia Islamia.">
-  <meta itemprop="image" content="https://tedxjmi.com/res/images/logos/light-social.jpg">
+  <meta itemprop="name" content="sahilqaiser">
+  <meta itemprop="description" content="A Techno-Cultural Event. This March, at Jamia Millia Islamia.">
+  <meta itemprop="image" content="res/images/logos/light-social.jpg">
 
   <!-- Browser themes -->
   <meta name="theme-color" content="#000">
@@ -59,7 +55,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
   <link rel="stylesheet" href="../res/css/style.css">
 
   <!-- Color skin -->
-  <link rel="stylesheet" href="../res/css/color_red.css">
+  <link rel="stylesheet" href="../res/css/color_blue.css">
 
   <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 8]>
@@ -90,14 +86,14 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
         <div id="navbar" class="navbar-collapse collapse col-lg-9 pull-right">
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
             <li><a href="/" class="line-height-unset">About</a></li>
-            <li><a href="/speakers/" class="line-height-unset">Speakers</a></li>
-            <li><a href="/our-team/" class="line-height-unset">Our Team</a></li>
-            <li><a href="/alumni/" class="line-height-unset">Alumni</a></li>
+            <li><a href="#page-top" class="line-height-unset">Events</a></li>
+            <li><a href="#page-top" class="line-height-unset">Our Team</a></li>
+            <li><a href="#page-top" class="line-height-unset">Alumni</a></li>
             <li><a href="#page-top" class="page-scroll">Sponsors</a></li>
-            <li><a href="/contact/" class="line-height-unset">Contact Us</a></li>
+            <li><a href="#page-top" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
               <a href="/register/" class="line-height-unset width-100">
-                Register
+                Sponsorship Registration
               </a>
             </li>
           </ul>
@@ -115,160 +111,10 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
   <!-- Section - Alumni Start -->
   <section id="alumni" class="bg-white">
     <div class="container">
-      <div class="row no-padding-rl">
-        <div class="col-sm-10 col-sm-offset-1">
-          <h2 class="font-family-alt font-weight-700 sm-title-large title-extra-large-2 text-gray-dark-2">
-            Our Sponsors
-          </h2>
-          <span class="bg-base-color xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl separator-line-extra-thick-long"></span>
-
-          <h3 class="font-family-alt font-weight-700 letter-spacing-1 xs-title-small title-medium">
-            Title sponsor
-          </h3>
-          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
-            <!-- Features Box Style v3 Start -->
-            <div class="features-box col-sm-8 col-sm-offset-2">
-              <div class="border border-gray-light border-round box-shadow-yes position-relative">
-                <div class="display-table height-100 no-padding-rl padding-7 width-100">
-                  <div class="display-table-cell no-padding-tb padding-8 text-center">
-                    <img src="../res/images/sponsors/thc.png" alt="THC">
-                  </div>
-                  <!-- //.display-table-cell -->
-                </div>
-                <!-- //.display-table -->
-              </div>
-              <!-- //.border -->
-            </div>
-            <!-- //Features Box Style v3 End -->
-          </div>
-
-          <br>
-          <h3 class="font-family-alt font-weight-700 letter-spacing-1 xs-title-small title-medium">
-            In association with
-          </h3>
-          <div class="row margin-4 no-margin-rl">
-            <!-- Features Box Style v3 Start -->
-            <div class="features-box col-sm-6">
-              <div class="border border-gray-light border-round box-shadow-yes position-relative">
-                <div class="display-table height-100 no-padding-rl padding-7 width-100">
-                  <div class="display-table-cell no-padding-tb padding-8">
-                    <div class="text-center">
-                      <img src="../res/images/sponsors/jamia_cooperative.jpg" alt="Jamia Cooperative Bank">
-                    </div>
-                  </div>
-                  <!-- //.display-table-cell -->
-                </div>
-                <!-- //.display-table -->
-              </div>
-              <!-- //.border -->
-            </div>
-            <!-- //Features Box Style v3 End -->
-
-            <!-- Features Box Style v3 Start -->
-            <div class="features-box col-sm-6 xs-margin-6 xs-no-margin-bottom xs-no-margin-rl">
-              <div class="border border-gray-light border-round box-shadow-yes position-relative">
-                <div class="display-table height-100 no-padding-rl padding-7 width-100">
-                  <div class="display-table-cell no-padding-tb padding-8">
-                    <div class="text-center">
-                      <img src="../res/images/sponsors/al-bake.png" alt="Al-Bake">
-                    </div>
-                  </div>
-                  <!-- //.display-table-cell -->
-                </div>
-                <br>
-                <!-- //.display-table -->
-                <div class="bg-black border-round font-family-alt letter-spacing-1
-                    margin-4 padding-tb-9px padding-rl-13px position-absolute
-                    position-bottom position-left text-extra-small text-uppercase
-                    text-white font-weight-700">
-                  Food Partner
-                </div>
-                <!-- //.bg-black -->
-              </div>
-              <!-- //.border -->
-            </div>
-            <!-- //Features Box Style v3 End -->
-
-            <!-- Features Box Style v3 Start -->
-            <div class="features-box col-sm-6 xs-margin-6 xs-no-margin-bottom xs-no-margin-rl">
-              <div class="border border-gray-light border-round box-shadow-yes position-relative">
-                <div class="display-table height-100 no-padding-rl padding-7 width-100">
-                  <div class="display-table-cell no-padding-tb padding-8">
-                    <div class="text-center">
-                      <img src="../res/images/sponsors/rupa_aleph.jpg" alt="Rupa and Aleph">
-                    </div>
-                  </div>
-                  <!-- //.display-table-cell -->
-                </div>
-                <br>
-                <!-- //.display-table -->
-                <div class="bg-black border-round font-family-alt letter-spacing-1
-                    margin-4 padding-tb-9px padding-rl-13px position-absolute
-                    position-bottom position-left text-extra-small text-uppercase
-                    text-white font-weight-700">
-                  Gift Partners
-                </div>
-                <!-- //.bg-black -->
-              </div>
-              <!-- //.border -->
-            </div>
-            <!-- //Features Box Style v3 End -->
-
-            <!-- Features Box Style v3 Start -->
-            <div class="features-box col-sm-6 xs-margin-6 xs-no-margin-bottom xs-no-margin-rl">
-              <div class="border border-gray-light border-round box-shadow-yes position-relative">
-                <div class="display-table height-100 no-padding-rl padding-7 width-100">
-                  <div class="display-table-cell no-padding-tb padding-8">
-                    <div class="text-center">
-                      <img src="../res/images/sponsors/croma_pictures.png" alt="Croma Pictures">
-                    </div>
-                  </div>
-                  <!-- //.display-table-cell -->
-                </div>
-                <br>
-                <!-- //.display-table -->
-              </div>
-              <!-- //.border -->
-            </div>
-            <!-- //Features Box Style v3 End -->
-          </div>
-          <!-- //.row -->
-
-          <br>
-          <p class="font-family-alt text-extra-large text-gray-dark-2">
-            Our event wouldn't have been possible without the valuable contribution
-            from:
-          </p>
-          <div class="row xs-margin-6 xs-no-margin-rl margin-3 no-margin-rl">
-            <!-- Features Box Style v3 Start -->
-            <div class="features-box col-sm-6 col-sm-offset-3">
-              <div class="border border-gray-light border-round box-shadow-yes position-relative">
-                <div class="display-table height-100 no-padding-rl padding-7 width-100">
-                  <div class="display-table-cell no-padding-tb padding-8">
-                    <a href="http://jmi.ac.in/aboutjamia/centres/innovationentr-epreneurship/introduction"
-                        class="display-block text-center" target="_blank">
-                      <img src="../res/images/sponsors/cie-jmi.jpg" alt="CIE, JMI">
-                    </a>
-                  </div>
-                  <!-- //.display-table-cell -->
-                </div>
-                <!-- //.display-table -->
-              </div>
-              <!-- //.border -->
-            </div>
-            <!-- //Features Box Style v3 End -->
-          </div>
-          <!-- //.row -->
-          <span class="bg-gray-light-2 separator-line-full xs-margin-12 xs-no-margin-rl margin-6 no-margin-rl"></span>
-        </div>
-        <!-- //.col-md-10 -->
-      </div>
-      <!-- //.row -->
-
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 text-center">
           <h3 class="display-block font-weight-300 letter-spacing-1 xs-title-small title-large">
-            Looking for sponsorship opportunities at TEDx JMI?
+            Looking for Sponsorship opportunities at Teknothon JMI?
           </h3>
           <br>
           <p class="text-gray-dark-2 xs-text-extra-large title-small">
@@ -279,7 +125,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             <div class="col-xs-12 col-sm-6 display-inline-block">
               <i class="fa fa-envelope-o display-block text-base-color title-extra-large"></i>
               <span class="display-block margin-5 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-extra-large title-small">
-                tedxjmi2017@gmail.com
+                teknothon.dcs@gmail.com
               </span>
             </div>
             <!-- //.display-inline-block -->
@@ -287,7 +133,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             <div class="col-xs-12 col-sm-6 display-inline-block xs-margin-12 xs-no-margin-rl xs-no-margin-bottom">
               <i class="fa fa-phone display-block text-base-color title-extra-large"></i>
               <span class="display-block margin-5 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-extra-large title-small">
-                +91 990 534 4182
+                +91 96503 89803
               </span>
             </div>
             <!-- //.display-inline-block -->
@@ -314,7 +160,7 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             Date &amp; Time
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            October 16, 2017<br>
+            March 26,27 2018<br>
             10 AM to 5 PM
           </p>
         </div>
@@ -326,15 +172,15 @@ Event website by Syed Faheel Ahmad (github.com/faheel)
             Venue
           </span>
           <p class="margin-3 font-family-alt no-margin-bottom no-margin-rl title-small text-gray-dark-2">
-            Dr. M. A. Ansari Auditorium,<br>
+            Department of Computer SCience,<br>
             Jamia Millia Islamia
           </p>
         </div>
         <!-- //.col-sm-4 -->
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
-          <a href="/res/insider_guide.pdf" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
-            <span>Download<br>insider guide</span>
+          <a href="/sponsors/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
+            <span>Register for<br>Sponsorship</span>
           </a>
         </div>
         <!-- //.col-sm-4 -->
