--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ Our event strategically allocates a window for ........
         <!-- //.col-sm-4 -->
 
         <div id="banner-registration" class="col-sm-4 xs-margin-8 xs-no-margin-bottom xs-no-margin-rl text-center">
-            <a href="/sponsors/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
+            <a href="/register/" class="btn btn-outline-base-color sm-btn-medium btn-large no-margin-rl">
               <span>Register for<br>Sponsorship</span>
             </a>
         </div>
