Registration Link Wrong

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -125,7 +125,7 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
             <div class="col-xs-12 col-sm-6 display-inline-block">
               <i class="fa fa-envelope-o display-block text-base-color title-extra-large"></i>
               <span class="display-block margin-5 no-margin-bottom no-margin-rl text-gray-dark-2 xs-text-extra-large title-small">
-                teknothon.dcs@gmail.com
+                teknothon.dcs@gmail.com<br>sponsorship@teknothon.tech
               </span>
             </div>
             <!-- //.display-inline-block -->
