Registration Link Wrong

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ Event website by @SahilQaiser, Adapted from TEDxJMI project by Syed Faheel Ahmad
 
         <div id="navbar" class="navbar-collapse collapse col-lg-9 pull-right">
           <ul class="nav navbar-nav font-family-alt letter-spacing-1 text-uppercase font-weight-700">
-            <li><a href="#page-top" class="page-scroll">About</a></li>
-            <li><a href="#page-top" class="line-height-unset">Events</a></li>
+            <li><a href="#page-top" class="page-scroll">Home</a></li>
+            <li><a href="/about/" class="line-height-unset">About</a></li>
             <li><a href="#page-top" class="line-height-unset">Our Team</a></li>
-            <li><a href="#page-top" class="line-height-unset">Alumni</a></li>
+            <li><a href="#page-top" class="line-height-unset">Events</a></li>
             <li><a href="/sponsors/" class="line-height-unset">Sponsors</a></li>
             <li><a href="#page-top" class="line-height-unset">Contact Us</a></li>
             <li class="bg-base-color">
